# python-sentiment-analysis

./: .gitignore  FastApi.py  README.MD  asyncCall.py  classifier.py  config.py  espanol.py  grpc_service.py  ingles.py  logger.py  pyproject.toml  request.py  requirements.txt  salida-con-sentimiento.csv
data/: reviews.csv
output/: salida-con-sentimiento.csv
protos/: service_pb2.py  service_pb2_grpc.py
sent/protos/: service.proto  service_pb2.py  service_pb2_grpc.py
